--- a/Formulaire/assets/css/styles.css
+++ b/Formulaire/assets/css/styles.css
@@ -19,3 +19,32 @@
 .tpas-valide{
     color : red;
 }
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f4f4f9;
+}
+.container {
+    text-align: center;
+    position: relative;
+}
+.icon {
+    position: fixed; /* Toujours visible même en cas de défilement */
+    top: 20px; /* Distance du haut */
+    right: 20px; /* Distance de la droite */
+    z-index: 1000; /* Assurez-vous que l'icône reste au-dessus du contenu */
+}
+.icon img {
+    width: 50px;
+    height: 50px;
+}
+.welcome-message h1 {
+    color: #333;
+    font-size: 2.5em;
+    margin: 0;
+}
